fix changes side overflow

--- a/console/src/app/modules/changes/changes.component.scss
+++ b/console/src/app/modules/changes/changes.component.scss
@@ -6,7 +6,7 @@
 }
 
 .scroll-container {
-    max-height: 540px;
+    max-height: 60vh;
     overflow-y: scroll;
 
     .item {
